--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <body class="bg-info ">
   <header></header>
+  <!-- main section -->
   <main class="main">
     <h1 class="text-center mt-3 fw-bold"><i class="fas fa-store"></i>DIGI-<span class="text-primary">STORE</span> </h1>
     <div class="input-group mb-5 mt-5 w-50 mx-auto">
@@ -29,6 +30,7 @@
         aria-describedby="button-addon2">
       <button class="btn btn-outline-secondary bg-primary text-light" type="button" id="button-addon2">Search</button>
     </div>
+    <!-- card section -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
@@ -38,6 +40,7 @@
         <div class="cart bg-white" id="my-cart">
           <table class="table">
             <thead>
+              <!-- Cart section -->
               <h1 class="text-center fw-bold text-primary">My-Cart</h1>
               <tr>
                 <th scope="col"></th>
